--- a/application/creator/VideoWidget.ui
+++ b/application/creator/VideoWidget.ui
@@ -111,22 +111,41 @@
        <string>Video properties</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="nameLabel">
+       <item row="4" column="3">
+        <widget class="QPushButton" name="previewPushButton">
          <property name="minimumSize">
           <size>
-           <width>80</width>
+           <width>25</width>
            <height>0</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>80</width>
+           <width>25</width>
            <height>16777215</height>
           </size>
          </property>
          <property name="text">
-          <string>Name:</string>
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="colorBitsDepthLabel">
+         <property name="minimumSize">
+          <size>
+           <width>120</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>120</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Color bits depth:</string>
          </property>
         </widget>
        </item>
@@ -152,8 +171,46 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QSpinBox" name="framerateSpinBox">
+       <item row="0" column="0">
+        <widget class="QLabel" name="nameLabel">
+         <property name="minimumSize">
+          <size>
+           <width>80</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Name:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QSpinBox" name="resolutionSpinBox">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="maximum">
+          <number>16777215</number>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QSpinBox" name="colorBitsDepthSpinBox">
          <property name="minimumSize">
           <size>
            <width>50</width>
@@ -190,103 +247,8 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
-        <widget class="QSpinBox" name="resolutionSpinBox">
-         <property name="minimumSize">
-          <size>
-           <width>50</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>50</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="maximum">
-          <number>16777215</number>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="colorBitsDepthLabel">
-         <property name="minimumSize">
-          <size>
-           <width>120</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>120</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Color bits depth:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QSpinBox" name="colorBitsDepthSpinBox">
-         <property name="minimumSize">
-          <size>
-           <width>50</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>50</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="maximum">
-          <number>16777215</number>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QLabel" name="previewLabel">
-         <property name="minimumSize">
-          <size>
-           <width>80</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>80</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Preview:</string>
-         </property>
-        </widget>
-       </item>
        <item row="4" column="1" colspan="2">
         <widget class="QLineEdit" name="previewLineEdit"/>
-       </item>
-       <item row="4" column="3">
-        <widget class="QPushButton" name="previewPushButton">
-         <property name="minimumSize">
-          <size>
-           <width>25</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>25</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>...</string>
-         </property>
-        </widget>
        </item>
        <item row="6" column="0" colspan="4">
         <layout class="QHBoxLayout" name="horizontalLayout_7">
@@ -343,8 +305,30 @@
          </item>
         </layout>
        </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="previewLabel">
+         <property name="minimumSize">
+          <size>
+           <width>80</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>80</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Preview:</string>
+         </property>
+        </widget>
+       </item>
        <item row="5" column="0" colspan="4">
         <widget class="QListWidget" name="framesListlistWidget"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QDoubleSpinBox" name="framerateDoubleSpinBox"/>
        </item>
       </layout>
      </widget>
@@ -354,22 +338,6 @@
  </widget>
  <resources/>
  <connections>
-  <connection>
-   <sender>framerateSpinBox</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>VideoWidget</receiver>
-   <slot>refreshVideo()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>365</x>
-     <y>39</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>660</x>
-     <y>40</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>resolutionSpinBox</sender>
    <signal>valueChanged(int)</signal>
